--- a/mainUI.ui
+++ b/mainUI.ui
@@ -53,52 +53,75 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="mode_label">
-        <property name="text">
-         <string>Selection Mode:</string>
+       <widget class="QGroupBox" name="selection_mode_group_box">
+        <property name="title">
+         <string>Selection Mode</string>
         </property>
+        <layout class="QHBoxLayout" name="selection_mode_layout">
+         <item>
+          <widget class="QRadioButton" name="radio_drag">
+           <property name="text">
+            <string>Drag Select</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="radio_click">
+           <property name="text">
+            <string>Click</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="size_label">
+           <property name="text">
+            <string>Size:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="click_size_input">
+           <property name="minimumSize">
+            <size>
+             <width>50</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>50</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="minimum">
+            <number>10</number>
+           </property>
+           <property name="maximum">
+            <number>200</number>
+           </property>
+           <property name="value">
+            <number>40</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="selection_spacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
        </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="mode_layout">
-        <item>
-         <widget class="QRadioButton" name="radio_drag">
-          <property name="text">
-           <string>Drag Select</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="radio_click">
-          <property name="text">
-           <string>Click (40x40)</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="size_label">
-          <property name="text">
-           <string>Size:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSpinBox" name="click_size_input">
-          <property name="minimum">
-           <number>10</number>
-          </property>
-          <property name="maximum">
-           <number>200</number>
-          </property>
-          <property name="value">
-           <number>40</number>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
       <item>
        <layout class="QHBoxLayout" name="view_mode_layout">
@@ -128,54 +151,39 @@
        </layout>
       </item>
       <item>
-       <widget class="QScrollArea" name="scroll_area">
-        <property name="widgetResizable">
-         <bool>true</bool>
+       <widget class="QGroupBox" name="image_view_group_box">
+        <property name="title">
+         <string>Image View</string>
         </property>
-        <widget class="QWidget" name="scrollAreaWidgetContents">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>786</width>
-           <height>499</height>
-          </rect>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
-          <item>
-           <widget class="QLabel" name="image_label">
-            <property name="text">
-             <string/>
+        <layout class="QVBoxLayout" name="image_view_layout">
+         <item>
+          <widget class="QScrollArea" name="scroll_area">
+           <property name="widgetResizable">
+            <bool>true</bool>
+           </property>
+           <widget class="QWidget" name="scrollAreaWidgetContents">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>786</width>
+              <height>499</height>
+             </rect>
             </property>
+            <layout class="QVBoxLayout" name="verticalLayout_2">
+             <item>
+              <widget class="QLabel" name="image_label">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
-          </item>
-         </layout>
-        </widget>
+          </widget>
+         </item>
+        </layout>
        </widget>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="roi_container_layout">
-        <item>
-         <widget class="QLabel" name="roi_preview_label">
-          <property name="text">
-           <string>ROI Preview</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="roi_size_label">
-          <property name="text">
-           <string>Size: ---</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
       </item>
      </layout>
     </item>
@@ -314,9 +322,31 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="ny_freq_input">
+         <widget class="QSlider" name="ny_freq_slider">
+          <property name="minimum">
+           <number>10</number>
+          </property>
+          <property name="maximum">
+           <number>100</number>
+          </property>
+          <property name="value">
+           <number>50</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="ny_freq_value_label">
           <property name="text">
-           <string>0.5</string>
+           <string>0.50</string>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>40</width>
+            <height>0</height>
+           </size>
           </property>
          </widget>
         </item>
