--- a/mainUI.ui
+++ b/mainUI.ui
@@ -190,65 +190,161 @@
     <item>
      <layout class="QVBoxLayout" name="right_layout">
       <item>
-       <layout class="QHBoxLayout" name="method_layout">
-        <item>
-         <widget class="QLabel" name="method_label">
-          <property name="text">
-           <string>LSF Smoothing Method:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="method_combo">
-          <item>
+       <widget class="QGroupBox" name="sfr_result_group_box">
+        <property name="title">
+         <string>SFR Result</string>
+        </property>
+        <layout class="QVBoxLayout" name="sfr_result_layout">
+         <item>
+          <layout class="QHBoxLayout" name="method_layout">
+           <item>
+            <widget class="QLabel" name="method_label">
+             <property name="text">
+              <string>LSF Smoothing:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="method_combo">
+             <property name="maximumSize">
+              <size>
+               <width>350</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <item>
+              <property name="text">
+               <string>none</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>savgol</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>gaussian</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>median</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>uniform</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>butterworth</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>wiener</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <spacer name="method_spacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="stabilize_checkbox">
            <property name="text">
-            <string>none</string>
+            <string>SFR Stabilize Filter (Average 3 samples)</string>
            </property>
-          </item>
-          <item>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="info_label">
            <property name="text">
-            <string>savgol</string>
+            <string>Status: Ready</string>
            </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>gaussian</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>median</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>uniform</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>butterworth</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>wiener</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="stabilize_layout">
-        <item>
-         <widget class="QCheckBox" name="stabilize_checkbox">
-          <property name="text">
-           <string>SFR Stabilize Filter (Average 3 samples)</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="ny_layout">
+           <item>
+            <widget class="QLabel" name="ny_label">
+             <property name="text">
+              <string>Ny:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSlider" name="ny_freq_slider">
+             <property name="minimumSize">
+              <size>
+               <width>100</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>350</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="minimum">
+              <number>10</number>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>50</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="ny_freq_value_label">
+             <property name="text">
+              <string>0.50</string>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="ny_spacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
       </item>
       <item>
        <layout class="QHBoxLayout" name="edge_threshold_layout">
@@ -300,65 +396,6 @@
          <widget class="QPushButton" name="btn_erase_edge">
           <property name="text">
            <string>Erase Edge</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="info_ny_layout">
-        <item>
-         <widget class="QLabel" name="info_label">
-          <property name="text">
-           <string>Status: Ready</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="ny_label">
-          <property name="text">
-           <string>Ny:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="ny_freq_slider">
-          <property name="minimumSize">
-           <size>
-            <width>100</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>350</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="minimum">
-           <number>10</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="value">
-           <number>50</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="ny_freq_value_label">
-          <property name="text">
-           <string>0.50</string>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>40</width>
-            <height>0</height>
-           </size>
           </property>
          </widget>
         </item>
