--- a/mainUI.ui
+++ b/mainUI.ui
@@ -268,7 +268,7 @@
               <widget class="QComboBox" name="method_combo">
                <property name="maximumSize">
                 <size>
-                 <width>350</width>
+                 <width>120</width>
                  <height>16777215</height>
                 </size>
                </property>
@@ -310,6 +310,13 @@
               </widget>
              </item>
              <item>
+              <widget class="QCheckBox" name="stabilize_checkbox">
+               <property name="text">
+                <string>SFR Stabilize (Avg 3)</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <spacer name="method_spacer">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
@@ -325,76 +332,82 @@
             </layout>
            </item>
            <item>
-            <widget class="QCheckBox" name="stabilize_checkbox">
+            <widget class="QLabel" name="info_label">
              <property name="text">
-              <string>SFR Stabilize Filter (Average 3 samples)</string>
+              <string>Status: Ready</string>
              </property>
             </widget>
-           </item>
-           <item>
-            <layout class="QHBoxLayout" name="info_ny_layout">
-             <item>
-              <widget class="QLabel" name="info_label">
-               <property name="text">
-                <string>Status: Ready</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="ny_label">
-               <property name="text">
-                <string>Ny:</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSlider" name="ny_freq_slider">
-               <property name="minimumSize">
-                <size>
-                 <width>100</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <property name="maximumSize">
-                <size>
-                 <width>350</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="minimum">
-                <number>10</number>
-               </property>
-               <property name="maximum">
-                <number>100</number>
-               </property>
-               <property name="value">
-                <number>50</number>
-               </property>
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QLabel" name="ny_freq_value_label">
-               <property name="text">
-                <string>0.50</string>
-               </property>
-               <property name="minimumSize">
-                <size>
-                 <width>40</width>
-                 <height>0</height>
-                </size>
-               </property>
-              </widget>
-             </item>
-            </layout>
            </item>
           </layout>
          </widget>
         </item>
         <item>
          <widget class="QWidget" name="canvas_placeholder" native="true"/>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="ny_layout">
+          <item>
+           <widget class="QLabel" name="ny_label">
+            <property name="text">
+             <string>Ny:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="ny_freq_slider">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>200</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="minimum">
+             <number>10</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>50</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="ny_freq_value_label">
+            <property name="text">
+             <string>0.50</string>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="ny_spacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
