--- a/mainUI.ui
+++ b/mainUI.ui
@@ -254,82 +254,71 @@
           <property name="title">
            <string>SFR Result</string>
           </property>
-          <layout class="QVBoxLayout" name="sfr_result_layout">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+          <layout class="QHBoxLayout" name="sfr_result_layout">
            <item>
-            <layout class="QHBoxLayout" name="method_layout">
+            <widget class="QLabel" name="method_label">
+             <property name="text">
+              <string>LSF:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="method_combo">
+             <property name="maximumSize">
+              <size>
+               <width>100</width>
+               <height>16777215</height>
+              </size>
+             </property>
              <item>
-              <widget class="QLabel" name="method_label">
-               <property name="text">
-                <string>LSF Smoothing:</string>
-               </property>
-              </widget>
+              <property name="text">
+               <string>none</string>
+              </property>
              </item>
              <item>
-              <widget class="QComboBox" name="method_combo">
-               <property name="maximumSize">
-                <size>
-                 <width>120</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <item>
-                <property name="text">
-                 <string>none</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>savgol</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>gaussian</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>median</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>uniform</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>butterworth</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>wiener</string>
-                </property>
-               </item>
-              </widget>
+              <property name="text">
+               <string>savgol</string>
+              </property>
              </item>
              <item>
-              <widget class="QCheckBox" name="stabilize_checkbox">
-               <property name="text">
-                <string>SFR Stabilize (Avg 3)</string>
-               </property>
-              </widget>
+              <property name="text">
+               <string>gaussian</string>
+              </property>
              </item>
              <item>
-              <spacer name="method_spacer">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
+              <property name="text">
+               <string>median</string>
+              </property>
              </item>
-            </layout>
+             <item>
+              <property name="text">
+               <string>uniform</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>butterworth</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>wiener</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="stabilize_checkbox">
+             <property name="text">
+              <string>Stabilize</string>
+             </property>
+            </widget>
            </item>
            <item>
             <widget class="QLabel" name="info_label">
@@ -345,69 +334,73 @@
          <widget class="QWidget" name="canvas_placeholder" native="true"/>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="ny_layout">
-          <item>
-           <widget class="QLabel" name="ny_label">
-            <property name="text">
-             <string>Ny:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSlider" name="ny_freq_slider">
-            <property name="minimumSize">
-             <size>
-              <width>100</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>200</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="minimum">
-             <number>10</number>
-            </property>
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="value">
-             <number>50</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="ny_freq_value_label">
-            <property name="text">
-             <string>0.50</string>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>40</width>
-              <height>0</height>
-             </size>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="ny_spacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
+         <widget class="QGroupBox" name="nyquist_group_box">
+          <property name="title">
+           <string>Nyquist</string>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+          <layout class="QHBoxLayout" name="ny_layout">
+           <item>
+            <widget class="QSlider" name="ny_freq_slider">
+             <property name="minimumSize">
+              <size>
+               <width>100</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="minimum">
+              <number>10</number>
+             </property>
+             <property name="maximum">
+              <number>100</number>
+             </property>
+             <property name="value">
+              <number>50</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="ny_freq_value_label">
+             <property name="text">
+              <string>0.50</string>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>40</width>
+               <height>0</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="ny_spacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </widget>
         </item>
        </layout>
       </widget>
