--- a/mainUI.ui
+++ b/mainUI.ui
@@ -257,7 +257,7 @@
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>50</height>
+            <height>100</height>
            </size>
           </property>
           <layout class="QHBoxLayout" name="sfr_result_layout">
@@ -341,10 +341,17 @@
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>50</height>
+            <height>100</height>
            </size>
           </property>
           <layout class="QHBoxLayout" name="ny_layout">
+           <item>
+            <widget class="QLabel" name="ny_label">
+             <property name="text">
+              <string>Nyquist :</string>
+             </property>
+            </widget>
+           </item>
            <item>
             <widget class="QSlider" name="ny_freq_slider">
              <property name="minimumSize">
