--- a/mainUI.ui
+++ b/mainUI.ui
@@ -327,6 +327,19 @@
              </property>
             </widget>
            </item>
+           <item>
+            <spacer name="sfr_result_spacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
           </layout>
          </widget>
         </item>
