--- a/mainUI.ui
+++ b/mainUI.ui
@@ -323,6 +323,19 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="btn_save_png">
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>💾 Save as PNG</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
